AJAX LIB: * Added SimileAjax.Graphics.getWidthHeight(el) RETURNS hash {width: w, height: h} in pixels. File: graphics.js * Updated License to refer to JQuery
git-svn-id: http://simile-widgets.googlecode.com/svn/ajax/trunk@1641 579c892a-5248-0410-a714-2bcf037eb5bf

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,9 @@ Version 2.2
  * Updated SimileAjax.Graphics._FontRenderingContext.prototype.computeSize
    to use getBoundingClientRect if available. See issue 13
    -- LarryK rev 1635 and 1637
+ * Added SimileAjax.Graphics.getWidthHeight(el) RETURNS hash {width:  w, height: h}
+   in pixels. File: graphics.js
+   -- LarryK 
 
 Version 2.1
  * JQuery updated to v1.2.6
