--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,26 @@
 RELEASE_NOTES.txt
 
+Version 2.2.0 -- March 4, 2009
+
+ Notable changes
+ * Now including jquery-1.2.6.min.js. Updated License to refer to JQuery
+ * Added new param, maxHeight to SimileAjax.Graphics.createBubbleForContentAndPoint
+   Added as last param for backwards compatibility. If used, maxHeight inserts
+   a div with a scrollbar in bubble so it won't be taller than maxHeight.
+   Bubbles shorter than maxHeight do not get a scrollbar.
+ * When you run run.bat, we now serve
+    http://localhost:8181/ajax - from src/webapp/site/
+    http://localhost:8181/ajax/api - from src/webapp/api/
+ * Added SimileAjax.version string in platform.js. Issue 60.
+ * Fix for issue 13, 30
+ * Added SimileAjax.Graphics.getWidthHeight(el) RETURNS hash {width:  w, height: h}
+   in pixels.
+ * Refactored popup bubble rendering code so that it uses as much CSS
+   (rather than Javascript) as possible.
+ * See Changes file for more information.
+ 
+ No known issues.
+ 
 
 Version 2.1.0 -- October 27, 2008
 
