AJAX: Increased version to 2.2.1, intended for first release on simile-widgets.org. Switched from jQuery 1.2.6 to 1.3.2. Also detect if jQuery or $ are in window and include our own jQuery if not.
git-svn-id: http://simile-widgets.googlecode.com/svn/ajax/trunk@1859 579c892a-5248-0410-a714-2bcf037eb5bf

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,8 @@
 CHANGES.txt
 
-Version 2.3
- 
+Version 2.2.1
+ * Switched from jQuery 1.2.6 to 1.3.2. Also detect if jQuery or $ are in window
+   and include our own jQuery if not.
 
 Version 2.2
  * Updated SimileAjax.Graphics._FontRenderingContext.prototype.computeSize
