--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,9 @@
 RELEASE_NOTES.txt
 
+Version 2.2.1 -- March 9, 2009
+ * Switched from jQuery 1.2.6 to 1.3.2. Also detect if jQuery or $ are in window
+   and include our own jQuery if not.
+ 
 Version 2.2.0 -- March 4, 2009
 
  Notable changes
