--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,9 @@
 RELEASE_NOTES.txt
 
+To be added in next release notes:
+ * Switched from jQuery 1.3.2 to 1.4.2. 
+ * Added remote logging feature for statistic collection, turned off by default.
+
 Version 2.2.1 -- March 9, 2009
  * Switched from jQuery 1.2.6 to 1.3.2. Also detect if jQuery or $ are in window
    and include our own jQuery if not.
